--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap-icons": "^1.8.3",
     "matter-js": "^0.18.0",
     "p5": "^1.4.1",
     "react": "^18.0.0",
+    "react-bootstrap-icons": "^1.8.2",
     "react-dom": "^18.0.0",
     "react-matter-js": "^1.0.5",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
